--- a/vacancies.html
+++ b/vacancies.html
@@ -112,10 +112,18 @@
 					</a>
 				</div>
 				<div class="col-md-7">
-					<h3>Project One</h3>
-					<h4>Subheading</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-					<a class="btn btn-primary" href="vacancy-item.html">View Project</i></a>
+					<h3>Bankier van morgen</h3>
+					<h4>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</h4>
+					<p>Je bent slim, hebt ambitie, drive, humor, barst van de skills en hebt een opleiding in ……wat dan ook op zak. Maar je droombaan nog niet gevonden. Geen probleem! Die creëren we samen. Ben jij straks onze nieuwe collega in de regio waar de slimste vierkante kilometer van de wereld is gevestigd?</p>
+					<div class="row">
+						<div class="col-md-4">
+							<p><i class="fa fa-calendar-o" aria-hidden="true"></i>Full time baan</p>
+						</div>
+						<div  class="col-md-6">
+							<p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18.</p>
+						</div>
+					</div>
+					<a class="btn btn-primary" href="vacancy-item.html">View Vacancy</i></a>
 				</div>
 			</div>
 		</div>
@@ -131,9 +139,17 @@
 					</a>
 				</div>
 				<div class="col-md-7">
-					<h3>Project One</h3>
-					<h4>Subheading</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+					<h3>Starterprogramma relatiemanagement</h3>
+					<h4>Toekomstgerichte starter die zichzelf vakinhoudelijk en projectmatig wil ontwikkelen.</h4>
+					<p> Je hebt je studie afgerond en bent klaar om aan je carrière te beginnen. Binnen ons startersprogramma leer je de skils om te gaan werken binnen de financiële sector. Tegelijkertijd wordt je uitgedaagd en geïnspireerd door te werken aan de bank van morgen . Ben je ambitieus, kritisch en wil je jezelf zo goed mogelijk ontwikkelen, dan hebben we de ideale functie voor jou.</p>
+					<div class="row">
+						<div class="col-md-4">
+							<p><i class="fa fa-calendar-o" aria-hidden="true"></i>Starterprogramma</p>
+						</div>
+						<div  class="col-md-6">
+							<p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18.</p>
+						</div>
+					</div>
 					<a class="btn btn-primary" href="vacancy-item.html">View Project</i></a>
 				</div>
 			</div>
@@ -151,9 +167,17 @@
 					</a>
 				</div>
 				<div class="col-md-7">
-					<h3>Project One</h3>
-					<h4>Subheading</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+					<h3>Relatie Manager Klein Zakelijk</h3>
+					<h4>Kredietexpert en gezicht in de markt voor MBK bedrijven.</h4>
+					<p>De afdeling Commercial Clients breidt uit. We zoeken voor ons kantoor in Eindhoven een Relatiemanager Kleinzakelijk. Herkennen ondernemers de ondernemer in jou? Vertel ons dan jouw verhaal. Wij zijn benieuwd! Als je goed bent, kun je bij ons nog beter worden. Dat beloven wij je. Dit is jouw kans om de professional te worden die je wilt zijn.</p>
+					<div class="row">
+						<div class="col-md-4">
+							<p><i class="fa fa-calendar-o" aria-hidden="true"></i>Full time baan</p>
+						</div>
+						<div  class="col-md-6">
+							<p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18.</p>
+						</div>
+					</div>
 					<a class="btn btn-primary" href="vacancy-item.html">View Project</i></a>
 				</div>
 			</div>
