Make Vacancy files and center a button in vacancies

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!-- /.row -->
 		<div class="section-title">
 			<h3> 
-				<a href="activities.html">
+				<a href="vacancies.html">
 					Vacancies 
 				</a>
 			</h3>
@@ -188,7 +188,8 @@
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>Bankier van morgen<br>
+                        <h3>
+							<a href="vacancy-bankier.html">Bankier van morgen</a><br>
                             <small>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</small>
                         </h3>
                         <p>Commerciële enthousiaste teamplayer met de wil en het vermogen om te ontwikkelen.</p>
@@ -198,7 +199,8 @@
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>Starterprogramma relatiemanagement<br>
+                        <h3>
+							<a href="vacancy-starter.html">Starterprogramma relatiemanagement</a><br>
                             <small>Job Title</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
@@ -208,7 +210,8 @@
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
                     <div class="caption">
-                        <h3>Relatie Manager Klein Zakelijk<br>
+                        <h3>
+							<a href="vacancy-relatie.html">Relatie Manager Klein Zakelijk</a><br>
                             <small>Job Title</small>
                         </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste saepe et quisquam nesciunt maxime.</p>
