--- a/activity-business.html
+++ b/activity-business.html
@@ -98,7 +98,7 @@
                     </li>
                     <li><a href="activities.html">Activities</a>
 					</li>
-					<li class="active">Activity Name</li>
+					<li class="active">Inhousedag</li>
                 </ol>
             </div>
         </div>
@@ -113,9 +113,11 @@
 						<img class="img-responsive img-hover" src="http://placehold.it/800x300" alt="">
 						</div>
 						<div> 
-						<h2> Title </h2> 
+						<h2> Inhousedag </h2> 
+						<h4> Ontdek alles wat de bank jou te bieden heeft in één middag. </h4>
 						<p>
-						Lots of text 
+							Wil je weten wat ABN AMRO voor jou kan betekenen?  Bij een In House Day laten verschillende afdelingen zien waar ze mee bezig zijn. We beginnen met een rondleiding door het hoofdkantoor van de regio Zuid. Vervolgens word je aan de hand van diverse presentaties meegenomen in de werkzaamheden van afdelingen die hier gevestigd zijn.
+							<br>Tijdens een In House Day krijg je een goede indruk van de bedrijfscultuur en ontdek je bij welke afdeling jij zou willen starten. Er is natuurlijk ruim de gelegenheid om jouw toekomstige collega’s de hemd van het lijf te vragen. Ben je nieuwsgierig geworden? Schrijf je in!
 						</p> 
 						</div> 
 						<center>
