--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <div class="fill" style="background-image:url('images/slide-abn.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Je eerste baan? Weet waaraan je begint!</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <div class="fill" style="background-image:url('images/slide-business.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Inhousedag: Ontdek alles wat de bank jou te bieden heeft in één middag. </h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <div class="fill" style="background-image:url('images/slide-meet.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Business Course: Los een realistisch financieringsvraagstuk op met je toekomstige collega’s. Laat je uitdagen!
 </h2>
@@ -189,7 +189,7 @@
                 <div class="thumbnail">
                     <div class="caption">
                         <h3><a href="vacancy-bankier.html">Bankier van <br>morgen</a></h3>
-                        <p><i class="fa fa-calendar-o" aria-hidden="true"></i>Full time baan</p>
+                        <p><i class="fa fa-briefcase" aria-hidden="true"></i>Full time baan</p>
                         <p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18</p>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                 <div class="thumbnail">
                     <div class="caption">
                         <h3><a href="vacancy-starter.html">Starterprogramma relatiemanagement</a></h3>
-						<p><i class="fa fa-calendar-o" aria-hidden="true"></i>Starterprogramma</p>
+						<p><i class="fa fa-briefcase" aria-hidden="true"></i>Starterprogramma</p>
                         <p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18</p>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                 <div class="thumbnail">
                     <div class="caption">
                         <h3><a href="vacancy-relatie.html">Relatie Manager <br> Klein Zakelijk</a></h3>
-                        <p><i class="fa fa-calendar-o" aria-hidden="true"></i>Full time baan</p>
+                        <p><i class="fa fa-briefcase" aria-hidden="true"></i>Full time baan</p>
                         <p><i class="fa fa-thumb-tack" aria-hidden="true"></i>Eindhoven, Vestdijk 18</p>
                     </div>
                 </div>
