--- a/index.html
+++ b/index.html
@@ -97,19 +97,20 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('images/slide-abn.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Je eerste baan? Weet waaraan je begint!</h2>
+                    <h2>Je eerste baan? Weet waaraan je begint! </h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/slide-business.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Inhousedag: Ontdek alles wat de bank jou te bieden heeft in één middag. </h2>
+                    <h2>Maak kennis met ABN AMRO en solliciteer!</h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/slide-meet.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Business Course: Los een realistisch financieringsvraagstuk op met je toekomstige collega’s. Laat je uitdagen!
+                    <h2>Business Courses, Inhousedagen en Meet & Greet <br>
+                    Schrijf je in!
 </h2>
                 </div>
             </div>
@@ -139,7 +140,7 @@
         <div class="row">
             <div class="col-md-4 img-portfolio">
                 <a href="activity-inhouse.html">
-                    <img class="img-responsive img-hover" src="images/Business corse450450.jpg" alt="">
+                    <img class="img-responsive img-hover" src="images/square-inhouse.jpg" alt="">
                 </a>
 			<h4> Inhousedag </h4>
 			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   1 december 2016 <br />
@@ -147,7 +148,7 @@
             </div>
             <div class="col-md-4 img-portfolio">
                 <a href="activity-business.html">
-                    <img class="img-responsive img-hover" src="images/Business corse450450.jpg" alt="">
+                    <img class="img-responsive img-hover" src="images/square-business.jpg" alt="">
                 </a>
 			<h4> Business Course </h4>
 			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   15 november 2016 <br />
@@ -156,7 +157,7 @@
 			
             <div class="col-md-4 img-portfolio " background-color="111111">
                 <a href="activity-meetgreet.html">
-                    <img class="img-responsive img-hover" src="images/Business corse450450.jpg" alt="">
+                    <img class="img-responsive img-hover" src="images/square-meet.jpg" alt="">
                 </a>
 			<h4> Meet & Greet </h4>
 			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   Op afspraakbasis <br />
