--- a/activities.html
+++ b/activities.html
@@ -108,7 +108,6 @@
 			<div class="row">
 				<div class="col-md-3">
 					<a href="activity-inhouse.html">
-						<img class="img-responsive img-hover" src="images/user.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-md-6">
@@ -140,7 +139,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<a href="activity-business.html">
-						<img class="img-responsive img-hover" src="images/user.jpg" alt="">
+						<img class="img-responsive img-hover" src="images/square-business.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-md-7">
@@ -171,7 +170,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<a href="activity-meetgreet.html">
-						<img class="img-responsive img-hover" src="images/user.jpg" alt="">
+						<img class="img-responsive img-hover" src="images/square-meet.jpg" alt="">
 					</a>
 				</div>
 				<div class="col-md-7">
