--- a/activity-business.html
+++ b/activity-business.html
@@ -110,7 +110,7 @@
 				<div class="col-md-8">
 					<div class="thumbnail">
 						<div>
-						<img class="img-responsive img-hover" src="http://placehold.it/800x300" alt="">
+						<img class="img-responsive img-hover" src="images/800-business.jpg" alt="">
 						</div>
 						<div class="detailTextbox"> 
 						<h2> Business Course </h2> 
@@ -169,7 +169,7 @@
 						<div class="row"> 
 							<div class="col-md-4 similarItems"> 
 							<a href="activity-inhouse.html">
-								<img class="img-responsive img-hover" src="http://placehold.it/200x200" alt="">
+								<img class="img-responsive img-hover" src="images/square-inhouse.jpg" alt="">
 							</a>
 							</div>
 							<div class="col-md-8 similarItems"> 
@@ -184,7 +184,7 @@
 						<div class="row"> 
 							<div class="col-md-4 similarItems"> 
 							<a href="activity-meetgreet.html">
-								<img class="img-responsive img-hover" src="http://placehold.it/200x200" alt="">
+								<img class="img-responsive img-hover" src="images/square-meet.jpg" alt="">
 							</a>
 							</div>
 							<div class="col-md-8 similarItems"> 
