--- a/activity-inhouse.html
+++ b/activity-inhouse.html
@@ -110,7 +110,7 @@
 				<div class="col-md-8">
 					<div class="thumbnail">
 						<div>
-						<img class="img-responsive img-hover" src="http://placehold.it/800x300" alt="">
+						<img class="img-responsive img-hover" src="images/800-inhouse.jpg" alt="">
 						</div>
 						<div class="detailTextbox"> 
 						<h2> Inhousedag </h2> 
@@ -170,7 +170,7 @@
 						<div class="row"> 
 							<div class="col-md-4 similarItems"> 
 							<a href="activity-business.html">
-								<img class="img-responsive img-hover" src="http://placehold.it/200x200" alt="">
+								<img class="img-responsive img-hover" src="images/square-business.jpg" alt="">
 							</a>
 							</div>
 							<div class="col-md-8 similarItems"> 
@@ -185,7 +185,7 @@
 						<div class="row"> 
 							<div class="col-md-4 similarItems"> 
 							<a href="activity-meetgreet.html">
-								<img class="img-responsive img-hover" src="http://placehold.it/200x200" alt="">
+								<img class="img-responsive img-hover" src="images/square-meet.jpg" alt="">
 							</a>
 							</div>
 							<div class="col-md-8 similarItems"> 
