--- a/vacancy-item.html
+++ b/vacancy-item.html
@@ -159,7 +159,10 @@
 								<img class="img-responsive img-hover" src="http://placehold.it/200x200" alt="">
 							</a>
 							</div>
-							
+							<div class="col-md-7"> 
+							<h4> Vacancy Name </h4>
+							<p> Text </p> 
+							</div>
 						</div>
 					</div>
 					<div class="thumbnail"> 
