Make everything Dutch

--- a/index.html
+++ b/index.html
@@ -51,26 +51,26 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="activities.html">Activities</a>
+                        <a href="activities.html">Activiteiten</a>
                     </li>
                     <li>
-                        <a href="vacancies.html">Vacancies</a>
+                        <a href="vacancies.html">Vacatures</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
 					
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gebruiker<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="profile.html">Profile</a>
+                                <a href="profile.html">Profiel</a>
                             </li>
                             <li>
-                                <a href="my_activities.html">My Activities</a>
+                                <a href="my_activities.html">Mijn Activiteiten</a>
                             </li>
                             <li>
-                                <a href="#">Settings</a>
+                                <a href="#">Instellingen</a>
                             </li>
                             <li>
                                 <a href="#">Logout </a>
@@ -95,23 +95,27 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
+			<a href="activities.html"> 
                 <div class="fill" style="background-image:url('images/slide-abn.jpg');"></div>
+			</a> 
                 <div class="carousel-caption">
-                    <h2>Je eerste baan? Weet waaraan je begint! </h2>
+                    <h2>Je eerste baan? Kom kijken waar je aan begint! <br> Schrijf je in!</h2>
                 </div>
             </div>
             <div class="item">
+			<a href="activities.html"> 
                 <div class="fill" style="background-image:url('images/slide-business.jpg');"></div>
+			</a> 
                 <div class="carousel-caption">
-                    <h2>Maak kennis met ABN AMRO en solliciteer!</h2>
+                    <h2>Je eerste baan? Kom kijken waar je aan begint! <br> Schrijf je in!</h2>
                 </div>
             </div>
             <div class="item">
+			<a href="activities.html"> 
                 <div class="fill" style="background-image:url('images/slide-meet.jpg');"></div>
+			</a> 
                 <div class="carousel-caption">
-                    <h2>Business Courses, Inhousedagen en Meet & Greet <br>
-                    Schrijf je in!
-</h2>
+                    <h2>Je eerste baan? Kom kijken waar je aan begint! <br> Schrijf je in!</h2>
                 </div>
             </div>
         </div>
@@ -131,7 +135,7 @@
     	<div class="section-title">
 			<h3> 
 				<a href="activities.html">
-					Activities 
+					Activiteiten
 				</a>
 			</h3>
 		</div>
@@ -161,7 +165,7 @@
                 </a>
 			<h4> Meet & Greet </h4>
 			<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>   Op afspraakbasis <br />
-			<i class="fa fa-thumb-tack" aria-hidden="true"></i>   Bij elk ABN Amro kantoor </p>
+			<i class="fa fa-thumb-tack" aria-hidden="true"></i>   Bij elk ABN AMRO kantoor </p>
             </div>
             <!-- <div class="col-md-3 img-portfolio">
                 <a href="portfolio-item.html">
@@ -179,7 +183,7 @@
 		<div class="section-title">
 			<h3> 
 				<a href="vacancies.html">
-					Vacancies 
+					Vacatures
 				</a>
 			</h3>
 		</div>
