--- a/activity-inhouse.html
+++ b/activity-inhouse.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Activities - Inhousedag</title>
+    <title>Activiteiten - Inhousedag</title>
     <link href="css/talent spotting.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
@@ -52,10 +52,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="activities.html">Activities</a>
+                        <a href="activities.html">Activiteiten</a>
                     </li>
                     <li>
-                        <a href="vacancies.html">Vacancies</a>
+                        <a href="vacancies.html">Vacatures</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -65,10 +65,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="profile.html">Profile</a>
+                                <a href="profile.html">Profiel</a>
                             </li>
                             <li>
-                                <a href="my_activities.html">My Activities</a>
+                                <a href="my_activities.html">Mijn Activiteiten</a>
                             </li>
                             <li>
                                 <a href="#">Settings</a>
@@ -91,12 +91,12 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Activities-Inhousedag
+                <h1 class="page-header">Activiteiten - Inhousedag
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="activities.html">Activities</a>
+                    <li><a href="activities.html">Activiteiten</a>
 					</li>
 					<li class="active">Inhousedag</li>
                 </ol>
@@ -124,7 +124,7 @@
 							</div>
 						</div>
 						<p>
-							Wil je weten wat ABN AMRO voor jou kan betekenen?  Bij een In House Day laten verschillende afdelingen zien waar ze mee bezig zijn. We beginnen met een rondleiding door het hoofdkantoor van de regio Zuid. Vervolgens word je aan de hand van diverse presentaties meegenomen in de werkzaamheden van afdelingen die hier gevestigd zijn.
+							Wil je weten wat ABN AMRO voor jou kan betekenen? Bij een In House Day laten verschillende afdelingen zien waar ze mee bezig zijn. We beginnen met een rondleiding door het hoofdkantoor van de regio Zuid. Vervolgens word je aan de hand van diverse presentaties meegenomen in de werkzaamheden van afdelingen die hier gevestigd zijn.
 						</p>
 						<p>Tijdens een In House Day krijg je een goede indruk van de bedrijfscultuur en ontdek je bij welke afdeling jij zou willen starten. Er is natuurlijk ruim de gelegenheid om jouw toekomstige collega’s de hemd van het lijf te vragen. Ben je nieuwsgierig geworden? Schrijf je in!
 						</p> 
@@ -164,7 +164,7 @@
 				
 				<div class="col-md-4">
 					<div class="similarContainer"> 
-						<h4> Similar Activities </h4> 
+						<h4> Vergelijkbare Activiteiten </h4> 
 						<hr> 
 						
 						<div class="row"> 
@@ -191,7 +191,7 @@
 							<div class="col-md-8 similarItems"> 
 							<h5> Meet & Greet</h5>
 							<p> <i class="fa fa-calendar-o" aria-hidden="true"></i>  Op afspraakbasis <br />
-							<i class="fa fa-thumb-tack" aria-hidden="true"></i>Bij elk ABN Amro kantoor </p>
+							<i class="fa fa-thumb-tack" aria-hidden="true"></i>Bij elk ABN AMRO kantoor </p>
 							</div>
 						</div>
 					</div>
