--- a/activity-registration.html
+++ b/activity-registration.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Activities</title>
+    <title>Activiteiten - Registratie</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="activities.html">Activities</a>
+                        <a href="activities.html">Activiteiten</a>
                     </li>
                     <li>
-                        <a href="vacancies.html">Vacancies</a>
+                        <a href="vacancies.html">Vacatures</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -62,10 +62,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="profile.html">Profile</a>
+                                <a href="profile.html">Profiel</a>
                             </li>
                             <li>
-                                <a href="my_activities.html">My Activities</a>
+                                <a href="my_activities.html">Mijn Activiteiten</a>
                             </li>
                             <li>
                                 <a href="#">Settings</a>
@@ -88,16 +88,16 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Activities
+                <h1 class="page-header">Activiteiten
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="activities.html">Activities</a>
+                    <li><a href="activities.html">Activiteiten</a>
 					</li>
-                    <li><a href="activity-item.html">Activity Name</a>
+                    <li><a href="activity-item.html">Activiteit</a>
 					</li>
-					<li class="active">Registration</li>
+					<li class="active">Registratie</li>
                 </ol>
             </div>
         </div>
@@ -105,7 +105,7 @@
 
 		<div class="row">
             <div class="col-md-8">
-                <h3>Registration</h3>
+                <h3>Registratie</h3>
                 <form method="post" action="mailto:talentspottingabnamro@outlook.com?subject=Mijn%20Registratie" enctype="text/plain" name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group form-group">
                         <div class="controls">
